GS-1320 Fixed the broken style for related link in course detail page

--- a/public/stylesheets/ie9.css
+++ b/public/stylesheets/ie9.css
@@ -77,12 +77,14 @@
 
 .panel > .related-links.panel-heading {
    background-image: none !important;
-   background: #82838B  !important;
+   background: #427EB4  !important;
    background: -moz-linear-gradient(left,  #A0A0A8  0%,  #82838B  80%);
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#427EB4 ), color-stop(80%,#82838B ));
    background: -webkit-linear-gradient(left,  #A0A0A8  0%,#82838B  80%);
    background: -o-linear-gradient(left,  #A0A0A8  0%,#82838B  80%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A0A0A8 ', endColorstr='#82838B ',GradientType=1 );
    border-radius: 0 !important;
-   background-color:rgb(66,126,180) !important;
+}
+.panel > .related-links.panel-heading.heading-fix {
+    background-color: rgb(242,242,242) !important;
 }
